--- a/action.yml
+++ b/action.yml
@@ -15,3 +15,7 @@ runs:
     - shell: bash
       run: echo 'hello ${{ inputs.who-to-greet }}'
     - uses: actions/checkout@v3
+    - if: ${{ github.event_name != 'pull_request' }}
+      shell: bash
+      run: echo 'this not a pull request event'
+
